--- a/views/home.html
+++ b/views/home.html
@@ -10,10 +10,10 @@ Sample Dating Site-328/dating/views/home.html
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!-- Bootstrap CSS -->
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../dating/styles/styles.css">
+    <link href="styles/styles.css" rel="stylesheet">
     <title>Dating Website</title>
 </head>
 <body>
@@ -29,13 +29,14 @@ Sample Dating Site-328/dating/views/home.html
 <div class="container" id="main">
     <div class="row" id="main-text">
         <div class="col-xl-6">
-            <h1 class="text-center">My dating Website</h1><!--Header that is centered and bold-->
+            <h1 class="text-center">My Dating Website</h1>
             <p>Welcome to the web's most successful dating website. At <strong>My Dating Website</strong>, you'll meet other like minded
                 individuals. We have the highest success rate of couples on the web. User's are matched by interest and location.
                 Find out why so many others have found love on our site!</p>
             <hr>
         <div id="text">
             <h1 class="text-center">Hear what our users are saying about us.</h1>
+            <hr>
             <ul>
                 <li>"I met the love of my live after only a month!" - Andrea</li>
                 <li>"It was so easy to set up and profile and start meeting people. I didn't realize how many others were looking
@@ -44,12 +45,12 @@ Sample Dating Site-328/dating/views/home.html
             </ul>
             <hr>
             <div class="col text-center">
-                <button class="btn btn-primary btn-lg">Create Profile</button>
+                <a type="button" class="btn btn-primary" href="info1">Create Profile</a>
             </div>
         </div>
     </div>
         <div class="col-xl-6 float-right">
-            <img src="../images/dating_pic.jpg" class="img-fluid rounded" alt="Picture of Couple"/>
+            <img src="images/dating.jpg" class="img-fluid rounded" alt="Picture of Couple">
         </div>
 </div>
 </div>
