--- a/views/summary.html
+++ b/views/summary.html
@@ -22,12 +22,13 @@
         <div class="col-6" id="info">
             <ul>
                 <li>Name: {{ @SESSION.fname }} </li>
-                <li>Gender: {{@SESSION.gender}}</li>
-                <li>Age: {{@SESSION.age}}</li>
-                <li>Phone: {{@SESSION.phoneNumber}}</li>
-                <li>State: {{@SESSION.state}}</li>
-                <li>Seeking: {{@SESSION.seeking}}</li>
-                <li>Interests: {{@SESSION.interests}}</li>
+                <li>Gender: {{ @SESSION.gender }}</li>
+                <li>Age: {{ @SESSION.age }}</li>
+                <li>Phone: {{ @SESSION.phoneNumber }}</li>
+                <li>State: {{ @SESSION.state }}</li>
+                <li>Seeking: {{ @SESSION.seeking }}</li>
+                <li>Indoor Interests: {{ @SESSION.Indoors }}</li>
+                <li>Outdoor Interests: {{ @SESSION.Outdoors }}</li>
             </ul>
         </div>
 
