--- a/views/info1.html
+++ b/views/info1.html
@@ -24,14 +24,16 @@
 
 <div class="container">
     <h1>Personal Information</h1>
-
     <form action="#" method="post" class="form-horizontal" id="form">
         <div class="form-group p=2">
             <h4>First Name</h4>
             <div class="row no-gutters">
             <div class="col-sm-6 col-md-8">
-                <input class="form-control" type="text" name="fname" id="fname" >
+                <input class="form-control" type="text" name="fname" id="fname" value="{{ @userFName }}" >
             </div>
+                <check if="{{ isset(@errors['fname']) }}">
+                    <span class="err">{{ @errors['fname'] }}</span>
+                </check>
             <div class="col-6 col-md-4">
                 <p><strong>Note: </strong>All information entered is protected by our <mark class="privacyPolicy">privacy policy.</mark> Profile information can
                     only be viewed by others with your permission.</p>
@@ -42,36 +44,49 @@
         <div class="form-group">
             <h4>Last Name</h4>
             <div class="col-md-8">
-                <input class="form-control" type="text" name="lname" id="lname" >
+                <input class="form-control" type="text" name="lname" id="lname" value="{{ @userLName }}" >
             </div>
+
+            <check if="{{ isset(@errors['lname']) }}">
+                <span class="err">{{ @errors['lname'] }}</span>
+            </check>
+
         </div>
 
         <div class="form-group">
             <h4>Age</h4>
             <div class="col-md-8">
-                <input class="form-control" type="text" name="age" id="age" >
+                <input class="form-control" type="text" name="age" id="age" value="{{ @userAge }}" >
             </div>
+
+            <check if="{{ isset(@errors['age']) }}">
+                <span class="err">{{ @errors['age'] }}</span>
+            </check>
         </div>
 
         <h4>Gender</h4>
             <div class="form-group">
-                <label class="radio-inline"><input type="radio" value="Male" id="male" name="gender" /> Male</label>
-                <label class="radio-inline"><input type="radio" value="Female" id="female" name="gender" /> Female</label>
+                <label class="radio-inline"><input type="radio" value="{{ @gender }}" id="male" name="gender"  /> Male</label>
+                <label class="radio-inline"><input type="radio" value="{{ @gender }}" id="female" name="gender" /> Female</label>
             </div>
 
 
         <div class="form-group">
             <h2>Phone Number</h2>
             <div class="col-md-8">
-                <input class="form-control" type="text" name="lname" id="phoneNumber" >
+                <input class="form-control" type="text" name="phoneNumber" id="phoneNumber" value="{{ @userNumber }}" >
             </div>
+
+            <check if="{{ isset(@errors['phoneNumber']) }}">
+                <span class="err">{{ @errors['phoneNumber'] }}</span>
+            </check>
+
         </div>
         <br>
         <div class="d-flex flex-row-reverse">
             <button type="submit" class="btn btn-primary" >Next</button>
         </div>
     </form>
-
 </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
