--- a/views/info2.html
+++ b/views/info2.html
@@ -25,15 +25,18 @@
 
 <div class="container">
     <h1>Profile</h1>
-
     <form action="#" method="post" class="form-horizontal" id="form">
         <div class="row">
         <div class="col-6">
         <div class="form-group">
             <label for="email" class="col-sm-2 control-label">Email</label>
             <div class="col">
-                <input class="form-control" type="text" name="email" id="email">
+                <input class="form-control" type="text" name="email" id="email" value="{{ @userMail }}">
             </div>
+
+            <check if="{{ isset(@errors['email']) }}">
+                <span class="err">{{ @errors['email'] }}</span>
+            </check>
         </div>
 
         <div class="form-group">
@@ -51,8 +54,8 @@
         <div class="form-group">
             <label class="col-sm-2 control-label">Seeking</label>
             <div class="col-sm-4">
-                <label class="radio-inline"><input type="radio" value="Male" id="male" name="seeking" /> Male</label>
-                <label class="radio-inline"><input type="radio" value="Female" id="female" name="seeking" /> Female</label>
+                <label class="radio-inline"><input type="radio" value="{{ @seeking }}" id="male" name="seeking" /> Male</label>
+                <label class="radio-inline"><input type="radio" value="{{ @seeking }}" id="female" name="seeking" /> Female</label>
             </div>
         </div>
         </div>
@@ -60,7 +63,7 @@
         <div class="col-6">
         <div class="form-group" id="bio">
             <label for="bio">Biography</label>
-            <textarea class="form-control"  rows="5" cols="30"  maxlength="500" name="bio" ></textarea>
+            <textarea class="form-control"  rows="5" cols="30"  maxlength="500" name="bio" value="{{ @bio }}" ></textarea>
         </div>
         </div>
         <br>
