added classes Member and PremiumMember, added controller.php, adapated index.php to controller

--- a/views/info2.html
+++ b/views/info2.html
@@ -54,8 +54,8 @@
         <div class="form-group">
             <label class="col-sm-2 control-label">Seeking</label>
             <div class="col-sm-4">
-                <label class="radio-inline"><input type="radio" value="{{ @seeking }}" id="male" name="seeking" /> Male</label>
-                <label class="radio-inline"><input type="radio" value="{{ @seeking }}" id="female" name="seeking" /> Female</label>
+                <label class="radio-inline"><input type="radio" value="Male" id="male" name="seeking" /> Male</label>
+                <label class="radio-inline"><input type="radio" value="Female" id="female" name="seeking" /> Female</label>
             </div>
         </div>
         </div>
