--- a/views/info1.html
+++ b/views/info1.html
@@ -66,8 +66,8 @@
 
         <h4>Gender</h4>
             <div class="form-group">
-                <label class="radio-inline"><input type="radio" value="{{ @gender }}" id="male" name="gender"  /> Male</label>
-                <label class="radio-inline"><input type="radio" value="{{ @gender }}" id="female" name="gender" /> Female</label>
+                <label class="radio-inline"><input type="radio" value="Male" id="male" name="gender"  /> Male</label>
+                <label class="radio-inline"><input type="radio" value="Female" id="female" name="gender" /> Female</label>
             </div>
 
 
@@ -80,6 +80,14 @@
             <check if="{{ isset(@errors['phoneNumber']) }}">
                 <span class="err">{{ @errors['phoneNumber'] }}</span>
             </check>
+
+            <h3>Premium Membership</h3>
+            <div class="form-group">
+            <input class="form-check-input" type="checkbox" value="Yes" name="member" id="member">
+            <label class="form-check-label" for="member">
+                Sign me up for a Premium Account!
+            </label>
+            </div>
 
         </div>
         <br>
